--- a/index.html
+++ b/index.html
@@ -9,7 +9,58 @@
 </head>
 
 <body>
+    <div>
+        <div>
+            <div>Header Logo</div>
+            <nav>
+                <a href="#">header link one</a>
+                <a href="#">header link one</a>
+                <a href="#">header link one</a>
+            </nav>
+        </div>
+        <div>
+            <div>
+                <h1>This website is awesome</h1>
+                <div>This website has some subtext that goes here under the main title. It's a smaller
+                    font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <div>
+                <div>This is a placeholder for an image</div>
+            </div>
+        </div>
+    </div>
 
-</body>
+    <h2>Some random information.</h2>
+    <div>
+        <div>Placeholder</div>
+        <div>this is some subtext under an illustration or image</div>
+
+        <div>Placeholder</div>
+        <div>this is some subtext under an illustration or image</div>
+
+        <div>Placeholder</div>
+        <div>this is some subtext under an illustration or image</div>
+
+        <div>Placeholder</div>
+        <div>this is some subtext under an illustration or image</div>
+    </div>
+
+    <div>
+        <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</q>
+
+        <h3>Thor, God of Thunder</h3>
+    </div>
+
+    <div>
+        <h3>Call to action! It's time!</h3>
+        <div>Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+    </div>
+
+    <footer>
+        <div>Copyright © Ethan Ashley 2023</div>
+    </footer>
 
 </html>
