--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container">
+        <div class="header">
             <div>Header Logo</div>
             <nav>
                 <a href="#">header link one</a>
@@ -18,15 +18,15 @@
                 <a href="#">header link one</a>
             </nav>
         </div>
-        <div>
-            <div>
+        <div class="hero">
+            <div class="hero-left">
                 <h1>This website is awesome</h1>
                 <div>This website has some subtext that goes here under the main title. It's a smaller
                     font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <div>
-                <div>This is a placeholder for an image</div>
+            <div class="hero-right">
+                <div class="placeholder">This is a placeholder for an image</div>
             </div>
         </div>
     </div>
