--- a/index.html
+++ b/index.html
@@ -26,24 +26,34 @@
                 <button>Sign up</button>
             </div>
             <div class="hero-right">
-                <div class="placeholder">This is a placeholder for an image</div>
+                <div class="hero-placeholder">This is a placeholder for an image</div>
             </div>
         </div>
     </div>
+    <div class="container-2">
+        <div class="title">Some random information.</div>
+        <div class="wrapper">
 
-    <h2>Some random information.</h2>
-    <div>
-        <div>Placeholder</div>
-        <div>this is some subtext under an illustration or image</div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
 
-        <div>Placeholder</div>
-        <div>this is some subtext under an illustration or image</div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
 
-        <div>Placeholder</div>
-        <div>this is some subtext under an illustration or image</div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
 
-        <div>Placeholder</div>
-        <div>this is some subtext under an illustration or image</div>
+            <div class="info">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 
     <div>
