--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
         <div class="author">-Thor, God of Thunder</div>
     </div>
 
-    <div>
-        <h3>Call to action! It's time!</h3>
-        <div>Sign up for our product by clicking that button right over there!</div>
-        <button>Sign up</button>
+    <div class="container-4">
+        <div class="cta-box">
+            <div>
+                <div class="cta-title">Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="cta-button">Sign up</button>
+        </div>
     </div>
 
     <footer>
