--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <div>Header Logo</div>
+            <div><a href="#">Header Logo</a></div>
             <nav>
-                <a href="#">header link one</a>
-                <a href="#">header link one</a>
-                <a href="#">header link one</a>
+                <a href="#">Who We Are</a>
+                <a href="#">Get In Touch</a>
+                <a href="#">Press</a>
             </nav>
         </div>
         <div class="hero">
